[tool.poetry]
name = "Python Examples"
version = "0.1.0"
description = ""
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
okama = "^1.2.3"
dash = "^2.0.0"
dash-daq = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
